foreach(type series prof)
  add_executable(plot_${type} plot_${type}.cpp)
#add_test(plot_${type} plot_${type} ${OUT_LGRNGN_DIR})
  target_link_libraries(plot_${type} ${HDF5_LIBRARIES})
  target_include_directories(plot_${type} PUBLIC ${HDF5_INCLUDE_DIRS})
  target_link_libraries(plot_${type} ${Boost_LIBRARIES})
  target_include_directories(plot_${type} PUBLIC ${Boost_INCLUDE_DIRS})
endforeach()
